[package]
name = "client_web_communication"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = { version = "1.8.1", features = ["full"] }
"hyper-tls" = "*"
"voca_rs" =  "*"